pages/Index.module.css
.loading, 
.noActiveGame {
    color: var(--color-white);
    text-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
}

.loading {
    font-size: 40px;
}

.noActiveGame h1 {
    font-size: 50px;
}

.noActiveGame p {
    font-size: 30px;
}

.welcome {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100vh;
    width: 700px;
    max-width: 100%;
}

.title {
    background-image: linear-gradient(var(--color-yellow), var(--color-orange));
    border-radius: 41px;
    box-shadow: 0 10px 0 0 rgba(0,0,0,.3);
    display: inline-block;
    font-size: 30px;
    overflow: hidden;
    padding: 8px;
    z-index: 1;
}

.titleInner {
    background-image: radial-gradient(var(--color-red), var(--color-bordeaux));
    border: none;
    border-bottom: 1px solid var(--color-red);
    border-radius: 33px;
    box-shadow: inset 0 0 8px rgba(0,0,0,.3);
    color: var(--color-white);
    outline: none;
    font-size: 25px;
    height: 66px;
    padding: 0 20px;
    text-shadow: 0 0 4px rgba(0, 0, 0, .5);
    min-width: 300px;
}

.label {
    color: var(--color-white);
    font-size: 40px;
    text-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
    margin: 0;
}

.button {
    --size: 60px !important;

    display: block;
    margin: 40px auto;
    width: auto !important;
}

.logoImage {
    display: block;
    max-width: 100%;
    max-height: 50vh;
    margin-bottom: 50px;
}

.content {
    align-items: center;
    display: flex;
    flex-direction: column;
    height: 350px;
    justify-content: center;
    text-align: center;
}


@media (max-width: 1239px) {
    .welcome {
        padding: 20px;
    }

    .noActiveGame h1 {
        font-size: 50px;
    }

    .loading {
        font-size: 40px;
    }

    .noActiveGame p {
        font-size: 30px;
    }
}

@media (max-width: 767px) {
    .loading,
    .noActiveGame h1 {
        font-size: 30px;
    }

    .noActiveGame p {
        font-size: 20px;
    }

    .welcome {
        padding: 10px;
    }

    .titleInner {
        min-width: auto;
        max-width: 100%;
        font-size: 23px;
        box-sizing: border-box;
        width: 100%;
    }

    .button {
        width: 100% !important;
    }
}

